# tele-chatbot

./: .env.example  .gitignore  COMMANDS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/commands/: next-step.md  progess.md
.cursor/rules/: inkliu-bot.mdc
.docs/: PROGRESS.md  SETUP.md  UPDATE-PROGRESS.md
alembic/: env.py
alembic/versions/: 12_1c8f5b_add_reminder_sent.py  12a0af9b942d_initial_migration.py  87ae9f4e6add_change_telegram_id_to_biginteger.py  99ababbb28e0_add_reminder_minutes.py  add_conversation_history.py
scripts/: start.sh
src/: __init__.py  agent.py  calendar.py  celery_app.py  database.py  holidays.py  keyboard.py  main.py  models.py  scheduler.py  tasks.py  tools.py
src/handlers/: __init__.py  callbacks.py  commands.py  messages.py  tasks.py
tests/: __init__.py  test_agent.py  test_holidays.py  test_models.py  test_reminder.py  test_tools.py
